# tge

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
assets/pixel-character/: Readme.txt
examples/: animation.rs  bunny_mark.rs  camera.rs  cannon.rs  car.rs  clock.rs  custom_mouse_cursor.rs  demo.rs  dvd.rs  frame_animation.rs  hare_mark.rs  hello_world.rs  image.rs  inertia.rs  mesh.rs  parallax.rs  parallax_forest.rs  parallax_mountain.rs  responsive.rs  shape.rs  sprites.rs  stroke_text.rs  text_layout.rs  vertices.rs
src/: audio.rs  engine.rs  error.rs  event.rs  filesystem.rs  game.rs  gamepad.rs  graphics.rs  keyboard.rs  lib.rs  math.rs  mouse.rs  prelude.rs  timer.rs  touch.rs  touchpad.rs  window.rs
src/gamepad/: axis.rs  button.rs  device.rs  power.rs  state.rs
src/graphics/: canvas.rs  color.rs  command.rs  draw_command.rs  font.rs  image.rs  mesh.rs  params.rs  pixel.rs  program.rs  renderer.rs  sprite_params.rs  texture.rs  texture_holder.rs  texture_ref.rs  vertex.rs  vertex_renderer.rs
src/graphics/opengl/: attachment.rs  buffer.rs  filter.rs  framebuffer.rs  mod.rs  primitive_type.rs  program.rs  texture.rs  vertex_array.rs  wrap.rs
src/graphics/params/: mesh.rs  mod.rs  sprite.rs  text.rs  transform.rs
src/graphics/shaders/: default.frag  default.vert
src/keyboard/: code.rs  modifier.rs
src/math/: angle.rs  float.rs  mod.rs  number.rs  region.rs  size.rs  transform.rs  vector.rs
src/mouse/: button.rs  cursor.rs
src/touch/: phase.rs
src/window/: dpi.rs  fullscreen.rs  icon.rs
