[package]
name = "tge"
version = "0.0.4"
authors = ["TakWolf <takwolf@foxmail.com>"]
edition = "2018"
description = "A lightweight cross-platform 2D game framework written in pure Rust and based on OpenGL 3.3+."
readme = "README.md"
repository = "https://github.com/TakWolf/tge"
license = "MIT OR Apache-2.0"
keywords = ["game", "graphics"]
categories = ["game-engines"]
exclude = ["examples/**", "assets/**"]
publish = false

[dependencies]
winit = "0.27.1"
glutin = "0.29.1"
glow = "0.12.1"
glam = "0.23.0"
image = "0.24.5"
fontdue = "0.7.2"
gilrs = "0.10.1"

[dev-dependencies]
rand = "0.8.5"
chrono = "0.4.23"

[profile.dev]
opt-level = 3
