[package]
name = "tge"
version = "0.0.4"
authors = ["TakWolf <takwolf@foxmail.com>"]
edition = "2018"
description = "A lightweight cross-platform 2D game framework written in pure Rust and based on OpenGL 3.3+."
readme = "README.md"
repository = "https://github.com/TakWolf/tge"
license = "MIT OR Apache-2.0"
keywords = ["game", "graphics"]
categories = ["game-engines"]
exclude = ["examples/**", "assets/**"]
publish = false

[dependencies]
winit = "0.27.5"
glutin = "0.29.1"
glow = "0.12.3"
glam = "0.24.2"
image = "0.24.7"
fontdue = "0.7.3"
gilrs = "0.10.2"

[dev-dependencies]
rand = "0.8.5"
chrono = "0.4.31"

[profile.dev]
opt-level = 3
