[package]
name = "tge"
version = "0.0.4"
authors = ["TakWolf <takwolf@foxmail.com>"]
edition = "2018"
description = "A lightweight cross-platform 2D game framework written in pure Rust and based on OpenGL 3.3+."
readme = "README.md"
repository = "https://github.com/TakWolf/tge"
license = "MIT OR Apache-2.0"
keywords = ["game", "graphics"]
categories = ["game-engines"]
exclude = ["examples/**", "assets/**"]
publish = false

[dependencies]
winit = "0.27.5"
glutin = "0.29.1"
glow = "0.14.1"
glam = "0.29.0"
image = "0.25.2"
fontdue = "0.9.2"
gilrs = "0.11.0"

[dev-dependencies]
rand = "0.8.5"
chrono = "0.4.38"

[profile.dev]
opt-level = 3
